--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     background-color: #6EEBB0;
-    text-align: center;
     font-family: 'Labrada', serif;
 
     margin: 0;
@@ -22,12 +21,18 @@ h1 {
 header {
     margin-top: 10px;
     border-bottom: 3px solid #335C9E;
+    text-align: center;
 }
 
 main {
     font-size: 18px;
     max-width: 1800px;
     margin: 0 auto;
+    text-align: center;
+}
+
+main section {
+    color: #335C9E;
 }
 
 main section div {
@@ -36,8 +41,32 @@ main section div {
     height: 100%;
 }
 
-main section {
-    color: #335C9E;
+#hobbies h2 {
+    text-decoration: underline;
+}
+
+#hobbies ul {
+    list-style-type: none;
+    text-align: center;
+    color: #000;
+    min-width: 400px;
+    max-width: 600px;
+    width: 80%;
+    margin: auto;
+}
+
+#hobbies ul li {
+    display: inline-block;
+    border: 1px solid #000;
+
+    padding: 8px;
+    margin: 5px;
+
+    background-color: rgba(87, 144, 235, 70%);
+}
+
+#hobbies ul li:hover {
+    background-color: rgba(87, 144, 235, 30%);
 }
 
 footer {
