--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,30 @@ main section div {
 }
 
 #hobbies ul li:hover {
-    background-color: rgba(87, 144, 235, 30%);
+    background-color: rgba(87, 144, 235, 50%);
+}
+
+#jekyll-book {
+    text-align: left;
+    width: 80%;
+    min-width: 350px;
+    font-size: 1em;
+    margin: 0 auto;
+}
+
+#jekyll-book h2 {
+    width: fit-content;
+    padding: 6px;
+    border-bottom: 3px solid black;
+    border-right: 3px solid black;
+}
+
+#jekyll-book div {
+    border: 1px solid #000;
+    padding: 0 12px;
+    margin-bottom: 0.5em;
+    background-color: rgba(255, 255, 255, 75%);
+    ;
 }
 
 footer {
