--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     font-family: 'Labrada', serif;
 
     margin: 0;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -67,6 +68,41 @@ main section div {
 
 #hobbies ul li:hover {
     background-color: rgba(87, 144, 235, 50%);
+}
+
+#photo-gallery {}
+
+#photo-gallery h2 {
+    margin-bottom: 0.1em;
+}
+
+#photo-gallery figure {
+    position: relative;
+    color: #fff;
+    overflow: hidden;
+}
+
+
+#photo-gallery figure img {
+    width: 100%;
+}
+
+#photo-gallery figure figcaption {
+    position: absolute;
+    top: -150px;
+
+    height: 150px;
+    line-height: 150px;
+    font-size: 2em;
+    width: 100%;
+
+    background-color: rgba(0, 0, 0, 75%);
+    transition: all 0.5s;
+}
+
+
+#photo-gallery figure:hover figcaption {
+    top: 0px;
 }
 
 #jekyll-book {
