--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,15 @@ main section div {
     height: 100%;
 }
 
+#hobbies {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #hobbies h2 {
     text-decoration: underline;
+    margin-bottom: 0em;
 }
 
 #hobbies ul {
@@ -53,7 +60,6 @@ main section div {
     min-width: 400px;
     max-width: 600px;
     width: 80%;
-    margin: auto;
 }
 
 #hobbies ul li {
@@ -131,4 +137,25 @@ footer {
     background-color: #529E7A;
     padding: 10px;
     margin: 0;
+}
+
+@media screen and (min-width: 60em) {
+    #photo-gallery figure {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    #photo-gallery figure figcaption {
+        position: initial;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        margin-left: 1rem;
+    }
+
+    #photo-gallery figure:hover figcaption {
+        top: unset;
+    }
 }
