--- a/css/style.css
+++ b/css/style.css
@@ -158,4 +158,28 @@ footer {
     #photo-gallery figure:hover figcaption {
         top: unset;
     }
+
+    #jekyll-book div {
+        max-width: 100%;
+        columns: 40rem;
+    }
+}
+
+@media screen and (min-width: 100em) {
+    #photo-gallery {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #photo-gallery hr {
+        display: none;
+    }
+
+    #photo-gallery h2 {
+        grid-column: 1 /-1;
+    }
+
+    #photo-gallery figure {
+        display: block;
+    }
 }
