--- a/css/nav.css
+++ b/css/nav.css
@@ -35,6 +35,18 @@ main {
 
 .logo {
     padding-top: 10px;
+    
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    height: 5vw;
+    width: 5vw;
+}
+
+.logo h1 {
+    font-size: 1.2em;
 }
 
 /* navigation list */
