--- a/css/nav.css
+++ b/css/nav.css
@@ -28,7 +28,7 @@ main {
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    padding: 0.5rem 1rem;
 }
 
 /* logo */
