--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,13 @@ h1 {
 
 header {
     border-bottom: 3px solid #335C9E;
-    text-align: center;
+    text-align: right;
 }
 
 main {
     font-size: 18px;
     max-width: 1800px;
-    margin: 1em auto;
+    padding: 1em auto;
     text-align: center;
 }
 
@@ -127,7 +127,7 @@ main #bio div {
     line-height: 75px;
 
     font-size: 2em;
-    
+
     width: 100%;
 
     background-color: rgba(0, 0, 0, 75%);
